--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </header>
   <main>
       <section class="gallery">
-          <img src="/img/heh. doglet.jpg" alt="Doglets relaxing on a riverbed.">
+          <img src="img/heh. doglet.jpg" alt="Doglets relaxing on a riverbed.">
       </section>
   </main>
     
